J2TCM-20 Fixed triple scrollbars and configured global css styles

--- a/src/adminportal/styles.module.css
+++ b/src/adminportal/styles.module.css
@@ -114,28 +114,7 @@
     gap: 10px;
 }
 
-.primaryBtn:hover {
-    cursor: pointer;
-}
-
-.primaryBtn:active {
-    filter: brightness(80%);
-}
-
 .primaryBtn {
-    margin-top: 50px;
+    composes: primaryBtn from '/src/globalStyles.css';
     width: 100%;
-    height: 45px;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 36px;
-    letter-spacing: 0.25px;
-    color: white;
-    text-shadow: 0 4px 8px rgba(38, 50, 56, 0.08);
-    box-sizing: border-box;
-    border: 1px solid #6C5CE7;
-    border-radius: 16px;
-    background: #6C5CE7;
 }
